--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,50 @@
+/* font-family: 'Nunito Sans', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
 :root {
   /* Estilos para el modo claro */
-  --bg-color-light: #dadada;
-  --text-color-light: #000000;
-  --border-color-light: #212121;
+  --bg-color-light: hsl(0, 0%, 98%);
+  --text-color-light: hsl(200, 15%, 8%);
+  --elements-color-light: hsl(0, 0%, 100%);
 
   /* Estilos para el modo oscuro */
-  --bg-color-dark: #171717;
-  --text-color-dark: #ffffff;
-  --border-color-dark: #22212a;
+  --bg-color-dark: hsl(207, 26%, 17%);
+  --text-color-dark: hsl(0, 0%, 100%);
+  --elements-color-dark: hsl(209, 23%, 22%);
+  --box-shadow-dark: rgba(10, 22, 50, 0.15);
 }
+
 
 
 .App-light {
   --bg-color: var(--bg-color-light);
   --text-color: var(--text-color-light);
-  --border-color: var(--border-color-light);
+  --elements-color: var(--elements-color-light);
+  color: var(--text-color-light);
+  --box-shadow: var(--box-shadow-dark);
+  --search-color: hsl(0, 0%, 52%);
 }
 
 .App-dark {
   --bg-color: var(--bg-color-dark);
   --text-color: var(--text-color-dark);
-  --border-color: var(--border-color-dark);
+  --elements-color: var(--elements-color-dark);
+  color: var(--text-color-dark);
+  --box-shadow: var(--box-shadow-dark);
+  --search-color: var(--text-color);
 }
+
 
 .size {
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  min-width: 100vw;
   background-color: var(--bg-color);
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
